--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -16,6 +16,13 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :retailer_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.select :retailer_id, Retailer.all.collect{|r| [r.name, r.id]}, {:prompt => 'Select One'}, {:class => 'form-control'} %>
+    </div>
+    <%=f.error_span(:bill_number) %>
+  </div>
+  <div class="form-group">
     <%= f.label :bill_number, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
       <%= f.text_field :bill_number, :class => 'form-control' %>
