--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
         <a class="navbar-brand" href="#">BhavaniCosmetics</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
+            <li><%= link_to "Retailers", retailers_path  %></li>
+            <li><%= link_to "Invoices", invoices_path  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
         </div>
