Working on create a payments using bootstrap modal

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,7 +1,19 @@
 <%- model_class = Invoice -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <div class="pull-right">
+    <%= link_to t('.back', :default => t("helpers.links.back")),
+                invoices_path, :class => 'btn btn-default'  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                  edit_invoice_path(@invoice), :class => 'btn btn-default' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                invoice_path(@invoice),
+                :method => 'delete',
+                :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                :class => 'btn btn-danger' %>
+  </div>
 </div>
+
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:bill_number) %>:</strong></dt>
@@ -12,12 +24,14 @@
   <dd><%= @invoice.total_amount %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              invoices_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_invoice_path(@invoice), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              invoice_path(@invoice),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<hr>
+
+<div>
+  <h3>Payments</h3>
+  <div class="pull-right">
+    <%= link_to "Add Payment", new_payment_path(invoice_id: @invoice.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => 'btn btn-primary'} %>
+  </div>
+</div>
+
+<% @invoice.payments.each do |payment| %>
+<% end %>
