--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,11 +1,41 @@
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  <h3 id="myModalLabel">Modal header</h3>
-</div>
-<div class="modal-body">
-  **here comes whatever you want to show!**
-</div>
-<div class="modal-footer">
-  <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-  <button class="btn btn-primary">Save changes</button>
-</div>
+<%= form_for [@payment.invoice, @payment], :html => { :class => "form-horizontal payment" } do |f| %>
+
+  <% if @payment.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@payment.errors.count, "error") %> prohibited this payment from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @payment.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.label :amount, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-5">
+      <%= f.text_field :amount, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:amount) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :issue_date, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-5">
+      <%= f.text_field :issue_date, :class => 'form-control datepicker',  value: f.object.issue_date.try(:strftime, '%-d-%-m-%Y') %>
+    </div>
+    <%=f.error_span(:issue_date) %>
+  </div>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-5">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                invoice_path(@payment.invoice), :class => 'btn btn-default' %>
+    </div>
+  </div>
+
+<% end %>
