--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -32,7 +32,7 @@
   <div class="form-group">
     <%= f.label :bill_date, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :bill_date, :class => 'form-control datepicker' %>
+      <%= f.text_field :bill_date, :class => 'form-control datepicker',  value: f.object.bill_date.try(:strftime, '%-d-%-m-%Y') %>
     </div>
     <%=f.error_span(:bill_date) %>
   </div>
