--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,3 +1,12 @@
+<div class="panel panel-default">
+  <%= form_for @invoices_filter_form, url: invoices_path, method: :get, html: {class: 'form-inline', style: 'padding: 15px 0 15px 10px'} do |f|%>
+    <div class="form-group">
+      <%= f.label :bill_number %>
+      <%= f.text_field :bill_number %>
+    </div>
+    <%= f.submit "Filter", :class => 'btn btn-primary' %>
+  <% end %>
+</div>
 <%- model_class = Invoice -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
