--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Retailers", retailers_path  %></li>
             <li><%= link_to "Invoices", invoices_path  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Outstanding Invoices Report", reports_outstanding_invoices_path  %></li>
           </ul>
         </div>
       </div>
