--- a/app/views/reports/outstanding_invoices/index.html.erb
+++ b/app/views/reports/outstanding_invoices/index.html.erb
@@ -2,8 +2,38 @@
   <%= form_for @outstanding_invoices_filter_form, url: reports_outstanding_invoices_path, method: :get, html: {class: 'form-inline', style: 'padding: 15px 0 15px 10px'} do |f|%>
     <div class="form-group">
       <%= f.label :retailer %>
-      <%= f.text_field :retailer_id, class: 'retailer-search', style: 'width:250px' %>
+      <% retailer_id = f.object.try(:retailer_id) %>
+      <% retailer_name = retailer_id.present? ? Retailer.find(retailer_id).name : nil %>
+      <%= f.text_field :retailer_id, class: 'retailer-search', style: 'width:250px', data: {initvalue: {id: retailer_id, text: retailer_name}} %>
     </div>
     <%= f.submit "Filter", :class => 'btn btn-primary' %>
   <% end %>
 </div>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th class="text-center">Id</th>
+      <th class="text-center">Retailer</th>
+      <th class="text-center">Bill No</th>
+      <th class="text-center">Bill Date</th>
+      <th class="text-center">Total Amount</th>
+      <th class="text-center">Amount Paid</th>
+      <th class="text-center">Balance</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% total = ((params[:page] || 1) - 1) * 30 %>
+    <% @invoices.each_with_index do |invoice, index| %>
+      <tr>
+        <td class="text-center"><%= total + (index + 1) %></td>
+        <td class="text-center"><%= invoice.retailer_name %></td>
+        <td class="text-center"><%= invoice.bill_number %></td>
+        <td class="text-center"><%= invoice.bill_date %></td>
+        <td class="text-center"><%= invoice.total_amount %></td>
+        <td class="text-center"><%= invoice.payments_amount %></td>
+        <td class="text-center"><%= invoice.balance %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
