--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -9,12 +9,10 @@
 </div>
 <%- model_class = Invoice -%>
 
-<div class="page-header">
-  <span>
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%= link_to t('.new', :default => t("helpers.links.new")), new_invoice_path, :class => 'btn btn-primary pull-right' %>
-  </span>
-</div>
+<span>
+  <%= link_to t('.new', :default => t("helpers.links.new")), new_invoice_path, :class => 'btn btn-primary pull-right', style: 'color:white' %>
+</span>
+
 
 <table class="table table-striped">
   <thead>
@@ -53,3 +51,6 @@
   </tbody>
 </table>
 
+<div class="pull-right">
+  <%= paginate @invoices %>
+</div>
