--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,21 +18,30 @@
     <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">BhavaniCosmetics</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li class=<%= controller_name == 'retailers' ? 'active' : ''%>><%= link_to "Retailers", retailers_path  %></li>
-            <li class=<%= controller_name == 'invoices' ? 'active' : ''%>><%= link_to "Invoices", invoices_path  %></li>
-            <li class=<%= controller_name == 'outstanding_invoices' ? 'active' : ''%>><%= link_to "Outstanding Invoices Report", reports_outstanding_invoices_path  %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
     <div class="container">
+      <nav class="navbar navbar-default navbar-static-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">BhavaniCosmetics</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class=<%= controller_name == 'retailers' ? 'active' : ''%>><%= link_to "Retailers", retailers_path  %></li>
+              <li class=<%= controller_name == 'invoices' ? 'active' : ''%>><%= link_to "Invoices", invoices_path  %></li>
+              <li class=<%= controller_name == 'outstanding_invoices' ? 'active' : ''%>><%= link_to "Outstanding Invoices Report", reports_outstanding_invoices_path  %></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <div class="row">
         <div class="col-lg-9">
           <%= bootstrap_flash %>
@@ -45,7 +54,5 @@
       </footer>
 
     </div> <!-- /container -->
-    <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
-
   </body>
 </html>
