--- a/app/views/reports/outstanding_invoices/index.html.erb
+++ b/app/views/reports/outstanding_invoices/index.html.erb
@@ -10,33 +10,39 @@
   <% end %>
 </div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th class="text-center">Id</th>
-      <th class="text-center">Retailer</th>
-      <th class="text-center">Bill No</th>
-      <th class="text-center">Bill Date</th>
-      <th class="text-center">Total Amount</th>
-      <th class="text-center">Amount Paid</th>
-      <th class="text-center">Balance</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% total = ((params[:page] || 1) - 1) * 30 %>
-    <% @invoices.each_with_index do |invoice, index| %>
+<% if @invoices %>
+  <span>
+    <%= link_to "Print", reports_outstanding_invoices_path(print: true), :class => 'btn btn-primary pull-right', style: 'color:white', target: '_blank'  %>
+  </span>
+
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td class="text-center"><%= total + (index + 1) %></td>
-        <td class="text-center"><%= invoice.retailer_name %></td>
-        <td class="text-center"><%= invoice.bill_number %></td>
-        <td class="text-center"><%= invoice.bill_date %></td>
-        <td class="text-center"><%= invoice.total_amount %></td>
-        <td class="text-center"><%= invoice.payments_amount %></td>
-        <td class="text-center"><%= invoice.balance %></td>
+        <th class="text-center">Id</th>
+        <th class="text-center">Retailer</th>
+        <th class="text-center">Bill No</th>
+        <th class="text-center">Bill Date</th>
+        <th class="text-center">Total Amount</th>
+        <th class="text-center">Amount Paid</th>
+        <th class="text-center">Balance</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="pull-right">
-  <%= paginate @invoices %>
-</div>
+    </thead>
+    <tbody>
+      <% total = ((params[:page] || 1) - 1) * 30 %>
+      <% @invoices.each_with_index do |invoice, index| %>
+        <tr>
+          <td class="text-center"><%= total + (index + 1) %></td>
+          <td class="text-center"><%= invoice.retailer_name %></td>
+          <td class="text-center"><%= invoice.bill_number %></td>
+          <td class="text-center"><%= invoice.bill_date %></td>
+          <td class="text-center"><%= invoice.total_amount %></td>
+          <td class="text-center"><%= invoice.payments_amount %></td>
+          <td class="text-center"><%= invoice.balance %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="pull-right">
+    <%= paginate @invoices %>
+  </div>
+<% end %>
